# TransferFunctions

./: .gitignore  CMakeLists.txt  Constants.h  DicomImport.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  ImageDumpBase.cpp  ImageDumpBase.h  ImageDumpDeserializer.h  ImageDumpSerializer.h  ItkImageFilter.h  ItkImageFilters.h  README.md  TransferFuctions.sln  TransferFuctions.vcxproj  TransferFuctions.vcxproj.filters  main.cpp
Filters/: ArtificialObjectsFilter.h  CheckerFilter.h  FilterDecision.h  IEigenValuesFilterVisitor.h  ItkCannyFilter.h  ItkCroppingFilter.h  ItkEigenValuesFilter.h  ItkEigenValuesRaw.h  ItkGaussianFilter.h  ItkGradientFilter.h  ItkHessianDeterminant.h  ItkHessianToVesselnessFilter.h  ItkLoGFilter.h  ItkSobelFilter.h
